--- a/package.json
+++ b/package.json
@@ -9,20 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fullcalendar/core": "^6.1.4",
+    "@fullcalendar/daygrid": "^6.1.4",
+    "@fullcalendar/interaction": "^6.1.4",
+    "@fullcalendar/list": "^6.1.4",
+    "@fullcalendar/react": "^6.1.4",
+    "@fullcalendar/timegrid": "^6.1.4",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
+    "@mui/x-data-grid": "^6.0.2",
     "@next/font": "13.1.6",
+    "@nivo/bar": "^0.55.0",
+    "@nivo/core": "^0.55.0",
+    "@nivo/geo": "^0.55.0",
+    "@nivo/line": "^0.55.0",
+    "@nivo/pie": "^0.55.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "chart.js": "^4.2.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "next": "13.1.6",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-pro-sidebar": "^1.0.0",
+    "react-redux": "^8.0.5",
+    "react-scripts": "^5.0.1",
     "tailwind-scrollbar-hide": "^1.1.5",
     "tailwindcss-textshadow": "^2.1.3",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.14.2",
