--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
     "@nivo/line": "^0.55.0",
     "@nivo/pie": "^0.55.0",
     "@reduxjs/toolkit": "^1.9.3",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -46,8 +44,6 @@
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.0.5",
     "react-scripts": "^5.0.1",
-    "tailwind-scrollbar-hide": "^1.1.5",
-    "tailwindcss-textshadow": "^2.1.3",
     "typescript": "4.9.4",
     "yup": "^1.0.2"
   },
@@ -55,8 +51,6 @@
     "@types/node": "^18.14.2",
     "@types/redux-logger": "^3.0.9",
     "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwind-scrollbar": "^2.1.0",
-    "tailwindcss": "^3.2.4"
+    "postcss": "^8.4.21"
   }
 }
